# tracing-fluentd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: default_writers.rs  fluent.rs  lib.rs  tracing.rs  worker.rs
tests/: layer.rs
