[package]
name = "tracing-fluentd"
version = "0.4.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Enables forwarding of `tracing` events towards the `fluentd` server."
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/tracing-fluentd"
keywords = ["tracing", "fluentd"]
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.serde]
version = "1"
default-features = false
features = ["alloc"]

[dependencies.indexmap]
version = "1"
features = ["serde"]

[dependencies.tracing-subscriber]
version = "0.3.8"
default-features = false
features = ["registry"]

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies]
tracing-core = "0.1"
crossbeam-channel = "0.5"
rmp-serde = "1"

[dev-dependencies.tracing]
version = "0.1"

[dev-dependencies.rmpv]
version = "1"
features = ["with-serde"]

[dev-dependencies.tracing-subscriber]
version = "0.3.8"
default-features = false
features = ["registry", "fmt"]

[features]
# Specifies to encode timestamp as EventTime instead of default unix timestamp
event_time = []
